--- a/notifications.html
+++ b/notifications.html
@@ -283,16 +283,19 @@
           </div>
 
           <div class="filter-buttons">
-            <button class="filter-btn active" onclick="filterByStatus('all')">
+            <button
+              class="filter-btn active"
+              onclick="filterByStatus('all', this)"
+            >
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today')">
+            <button class="filter-btn" onclick="filterByStatus('today', this)">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week')">
+            <button class="filter-btn" onclick="filterByStatus('week', this)">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month')">
+            <button class="filter-btn" onclick="filterByStatus('month', this)">
               هذا الشهر
             </button>
           </div>
@@ -349,206 +352,171 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // ======= NOTIFICATIONS LOGIC =======
+      // ======= NOTIFICATIONS LOGIC (FINAL FIXED VERSION) =======
       let allBookings = [];
       let filteredBookings = [];
       let currentFilter = "all";
 
+      // Parse any timestamp format safely
+      function parseDateSafe(value) {
+        if (!value) return null;
+        if (value instanceof Date) return value;
+        if (!isNaN(value)) {
+          // Excel serials / numbers
+          const num = Number(value);
+          if (num > 1e9) return new Date(num); // epoch ms
+          const excelEpoch = new Date(Date.UTC(1899, 11, 30));
+          return new Date(excelEpoch.getTime() + num * 86400000);
+        }
+        const d = new Date(value);
+        return isNaN(d) ? null : d;
+      }
+
+      // Get "start of today"
+      function startOfToday() {
+        const now = new Date();
+        return new Date(now.getFullYear(), now.getMonth(), now.getDate());
+      }
+
+      // Load bookings
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
-          filteredBookings = allBookings;
+          allBookings = rawData.slice(1).map((r) => ({
+            ...r,
+            _ts: parseDateSafe(r.timestamp),
+          }));
+
+          // Sort newest first
+          allBookings.sort((a, b) => (b._ts || 0) - (a._ts || 0));
+
+          filteredBookings = [...allBookings];
           renderNotifications();
         } catch (error) {
           console.error("Error loading notifications:", error);
         }
       }
 
+      // Render
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (filteredBookings.length === 0) {
+        if (!filteredBookings.length) {
           container.innerHTML = `
-            <div class="empty-state">
-              <i class="fa-solid fa-bell-slash"></i>
-              <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
-            </div>
-          `;
+      <div class="empty-state">
+        <i class="fa-solid fa-bell-slash"></i>
+        <h3>لا توجد إشعارات</h3>
+        <p>لم يتم العثور على أي حجوزات</p>
+      </div>
+    `;
           return;
         }
 
         container.innerHTML = filteredBookings
-          .map((booking) => {
-            const timeAgo = getTimeAgo(booking.timestamp);
+          .map((b) => {
+            const timeAgo = getTimeAgo(b._ts);
             return `
-            <div class="notification-item">
-              <div class="notification-icon">
-                <i class="fa-solid fa-user-plus"></i>
-              </div>
-              <div class="notification-content">
-                <div class="notification-name">${
-                  booking.name || "غير محدد"
-                }</div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-phone"></i> ${
-                    booking.phone || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-stethoscope"></i> ${
-                    booking.service || "غير محدد"
-                  }
-                </div>
-                <div class="notification-details">
-                  <i class="fa-solid fa-calendar"></i> ${
-                    booking.appointment || "غير محدد"
-                  }
-                </div>
-                <div class="notification-time">
-                  <i class="fa-solid fa-clock"></i> ${timeAgo}
-                </div>
-              </div>
-              <div>
-                <span class="notification-badge-small">جديد</span>
-              </div>
+        <div class="notification-item">
+          <div class="notification-icon">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+          <div class="notification-content">
+            <div class="notification-name">${b.name || "غير محدد"}</div>
+            <div class="notification-details">
+              <i class="fa-solid fa-phone"></i> ${b.phone || "غير محدد"}
             </div>
-          `;
+            <div class="notification-details">
+              <i class="fa-solid fa-stethoscope"></i> ${b.service || "غير محدد"}
+            </div>
+            <div class="notification-details">
+              <i class="fa-solid fa-calendar"></i> ${
+                b.appointment || "غير محدد"
+              }
+            </div>
+            <div class="notification-time">
+              <i class="fa-solid fa-clock"></i> ${timeAgo}
+            </div>
+          </div>
+        </div>`;
           })
           .join("");
       }
 
-      function getTimeAgo(timestamp) {
-        if (!timestamp) return "غير محدد";
-
+      // "time ago" in Arabic
+      function getTimeAgo(date) {
+        if (!(date instanceof Date) || isNaN(date)) return "غير محدد";
         const now = new Date();
-        const bookingDate = new Date(timestamp);
-        const diffMs = now - bookingDate;
-        const diffMins = Math.floor(diffMs / 60000);
-        const diffHours = Math.floor(diffMs / 3600000);
-        const diffDays = Math.floor(diffMs / 86400000);
-
-        if (diffMins < 1) return "الآن";
-        if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
-        if (diffHours < 24) return `منذ ${diffHours} ساعة`;
-        if (diffDays < 7) return `منذ ${diffDays} يوم`;
-
-        return bookingDate.toLocaleDateString("ar-EG");
+        const diffMs = now - date;
+        const mins = Math.floor(diffMs / 60000);
+        const hrs = Math.floor(diffMs / 3600000);
+        const days = Math.floor(diffMs / 86400000);
+        if (mins < 1) return "الآن";
+        if (mins < 60) return `منذ ${mins} دقيقة`;
+        if (hrs < 24) return `منذ ${hrs} ساعة`;
+        if (days < 7) return `منذ ${days} يوم`;
+        return date.toLocaleDateString("ar-EG");
       }
 
-      // Parse appointment date string to Date object
-      function parseAppointmentDate(appointmentStr) {
-        if (!appointmentStr) return null;
-
-        // Handle formats like "2025-01-15" or "15/01/2025" or "January 15, 2025"
-        try {
-          // Try ISO format first
-          let date = new Date(appointmentStr);
-          if (!isNaN(date.getTime())) return date;
-
-          // Try parsing common formats
-          const parts = appointmentStr.split(/[-/\s,]+/);
-          if (parts.length >= 3) {
-            // Try different orders
-            const formats = [
-              [parts[0], parts[1], parts[2]], // Year-Month-Day
-              [parts[2], parts[1], parts[0]], // Day-Month-Year
-              [parts[2], parts[0], parts[1]], // Year-Day-Month
-            ];
-
-            for (let format of formats) {
-              date = new Date(format[0], format[1] - 1, format[2]);
-              if (!isNaN(date.getTime())) return date;
-            }
-          }
-        } catch (e) {
-          console.error("Error parsing date:", appointmentStr, e);
-        }
-
-        return null;
-      }
-
-      function filterByStatus(status) {
+      // Filter buttons (today, week, month)
+      function filterByStatus(status, btn) {
         currentFilter = status;
 
-        // Update active button
-        document.querySelectorAll(".filter-btn").forEach((btn) => {
-          btn.classList.remove("active");
-        });
-        event.target.classList.add("active");
+        // Update button active state
+        document
+          .querySelectorAll(".filter-btn")
+          .forEach((b) => b.classList.remove("active"));
+        if (btn) btn.classList.add("active");
 
         const now = new Date();
-        const today = new Date(
-          now.getFullYear(),
-          now.getMonth(),
-          now.getDate()
-        );
-        const tomorrow = new Date(today);
-        tomorrow.setDate(tomorrow.getDate() + 1);
+        const today = startOfToday();
+        const weekAgo = new Date(now - 7 * 24 * 60 * 60 * 1000);
+        const monthAgo = new Date(now - 30 * 24 * 60 * 60 * 1000);
 
-        const weekFromNow = new Date(today);
-        weekFromNow.setDate(weekFromNow.getDate() + 7);
-
-        const monthFromNow = new Date(today);
-        monthFromNow.setMonth(monthFromNow.getMonth() + 1);
-
-        if (status === "all") {
-          filteredBookings = allBookings;
-        } else if (status === "today") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate < tomorrow;
-          });
-        } else if (status === "week") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate <= weekFromNow;
-          });
-        } else if (status === "month") {
-          filteredBookings = allBookings.filter((b) => {
-            const appointmentDate = parseAppointmentDate(b.appointment);
-            if (!appointmentDate) return false;
-            return appointmentDate >= today && appointmentDate <= monthFromNow;
-          });
-        }
+        filteredBookings = allBookings.filter((b) => {
+          if (!b._ts) return false;
+          if (status === "today") return b._ts >= today;
+          if (status === "week") return b._ts >= weekAgo;
+          if (status === "month") return b._ts >= monthAgo;
+          return true;
+        });
 
         renderNotifications();
       }
 
+      // Search + respect current filter
       function filterNotifications() {
-        const searchTerm = document
+        const q = document
           .getElementById("searchInput")
-          .value.toLowerCase();
+          .value.toLowerCase()
+          .trim();
+        let base = [...allBookings];
 
-        if (searchTerm === "") {
-          // Re-apply current time filter
-          const dummyEvent = {
-            target: document.querySelector(".filter-btn.active"),
-          };
-          const originalEvent = window.event;
-          window.event = dummyEvent;
-          filterByStatus(currentFilter);
-          window.event = originalEvent;
-          return;
+        const now = new Date();
+        const today = startOfToday();
+        const weekAgo = new Date(now - 7 * 24 * 60 * 60 * 1000);
+        const monthAgo = new Date(now - 30 * 24 * 60 * 60 * 1000);
+
+        if (currentFilter !== "all") {
+          base = base.filter((b) => {
+            if (!b._ts) return false;
+            if (currentFilter === "today") return b._ts >= today;
+            if (currentFilter === "week") return b._ts >= weekAgo;
+            if (currentFilter === "month") return b._ts >= monthAgo;
+            return true;
+          });
         }
 
-        // Apply search on top of current filter
-        const baseBookings =
-          currentFilter === "all" ? allBookings : filteredBookings;
-
-        filteredBookings = baseBookings.filter((booking) => {
-          return (
-            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
-            (booking.service &&
-              booking.service.toLowerCase().includes(searchTerm)) ||
-            (booking.phone && booking.phone.includes(searchTerm))
+        if (q) {
+          base = base.filter(
+            (b) =>
+              (b.name && b.name.toLowerCase().includes(q)) ||
+              (b.service && b.service.toLowerCase().includes(q)) ||
+              (b.phone && b.phone.includes(q))
           );
-        });
+        }
 
+        filteredBookings = base;
         renderNotifications();
       }
 
@@ -598,3 +566,4 @@
     </script>
   </body>
 </html>
+g
