--- a/notifications.html
+++ b/notifications.html
@@ -283,19 +283,16 @@
           </div>
 
           <div class="filter-buttons">
-            <button
-              class="filter-btn active"
-              onclick="filterByStatus('all', this)"
-            >
+            <button class="filter-btn active" onclick="filterByStatus('all')">
               الكل
             </button>
-            <button class="filter-btn" onclick="filterByStatus('today', this)">
+            <button class="filter-btn" onclick="filterByStatus('today')">
               اليوم
             </button>
-            <button class="filter-btn" onclick="filterByStatus('week', this)">
+            <button class="filter-btn" onclick="filterByStatus('week')">
               هذا الأسبوع
             </button>
-            <button class="filter-btn" onclick="filterByStatus('month', this)">
+            <button class="filter-btn" onclick="filterByStatus('month')">
               هذا الشهر
             </button>
           </div>
@@ -352,171 +349,168 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // ======= NOTIFICATIONS LOGIC (FINAL FIXED VERSION) =======
+      // ======= NOTIFICATIONS LOGIC =======
       let allBookings = [];
       let filteredBookings = [];
       let currentFilter = "all";
 
-      // Parse any timestamp format safely
-      function parseDateSafe(value) {
-        if (!value) return null;
-        if (value instanceof Date) return value;
-        if (!isNaN(value)) {
-          // Excel serials / numbers
-          const num = Number(value);
-          if (num > 1e9) return new Date(num); // epoch ms
-          const excelEpoch = new Date(Date.UTC(1899, 11, 30));
-          return new Date(excelEpoch.getTime() + num * 86400000);
-        }
-        const d = new Date(value);
-        return isNaN(d) ? null : d;
-      }
-
-      // Get "start of today"
-      function startOfToday() {
-        const now = new Date();
-        return new Date(now.getFullYear(), now.getMonth(), now.getDate());
-      }
-
-      // Load bookings
       async function loadNotifications() {
         try {
           const res = await fetch("/api/bookings");
           const rawData = await res.json();
-          allBookings = rawData.slice(1).map((r) => ({
-            ...r,
-            _ts: parseDateSafe(r.timestamp),
-          }));
-
-          // Sort newest first
-          allBookings.sort((a, b) => (b._ts || 0) - (a._ts || 0));
-
-          filteredBookings = [...allBookings];
+          allBookings = rawData.slice(1).reverse(); // Reverse to show newest first
+          filteredBookings = allBookings;
           renderNotifications();
         } catch (error) {
           console.error("Error loading notifications:", error);
         }
       }
 
-      // Render
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
-        if (!filteredBookings.length) {
+        if (filteredBookings.length === 0) {
           container.innerHTML = `
-      <div class="empty-state">
-        <i class="fa-solid fa-bell-slash"></i>
-        <h3>لا توجد إشعارات</h3>
-        <p>لم يتم العثور على أي حجوزات</p>
-      </div>
-    `;
+            <div class="empty-state">
+              <i class="fa-solid fa-bell-slash"></i>
+              <h3>لا توجد إشعارات</h3>
+              <p>لم يتم العثور على أي حجوزات</p>
+            </div>
+          `;
           return;
         }
 
         container.innerHTML = filteredBookings
-          .map((b) => {
-            const timeAgo = getTimeAgo(b._ts);
+          .map((booking) => {
+            const timeAgo = getTimeAgo(booking.timestamp);
             return `
-        <div class="notification-item">
-          <div class="notification-icon">
-            <i class="fa-solid fa-user-plus"></i>
-          </div>
-          <div class="notification-content">
-            <div class="notification-name">${b.name || "غير محدد"}</div>
-            <div class="notification-details">
-              <i class="fa-solid fa-phone"></i> ${b.phone || "غير محدد"}
+            <div class="notification-item">
+              <div class="notification-icon">
+                <i class="fa-solid fa-user-plus"></i>
+              </div>
+              <div class="notification-content">
+                <div class="notification-name">${
+                  booking.name || "غير محدد"
+                }</div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-phone"></i> ${
+                    booking.phone || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-stethoscope"></i> ${
+                    booking.service || "غير محدد"
+                  }
+                </div>
+                <div class="notification-details">
+                  <i class="fa-solid fa-calendar"></i> ${
+                    booking.appointment || "غير محدد"
+                  }
+                </div>
+                <div class="notification-time">
+                  <i class="fa-solid fa-clock"></i> ${timeAgo}
+                </div>
+              </div>
+              <div>
+                <span class="notification-badge-small">جديد</span>
+              </div>
             </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-stethoscope"></i> ${b.service || "غير محدد"}
-            </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-calendar"></i> ${
-                b.appointment || "غير محدد"
-              }
-            </div>
-            <div class="notification-time">
-              <i class="fa-solid fa-clock"></i> ${timeAgo}
-            </div>
-          </div>
-        </div>`;
+          `;
           })
           .join("");
       }
 
-      // "time ago" in Arabic
-      function getTimeAgo(date) {
-        if (!(date instanceof Date) || isNaN(date)) return "غير محدد";
+      function getTimeAgo(timestamp) {
+        if (!timestamp) return "غير محدد";
+
         const now = new Date();
-        const diffMs = now - date;
-        const mins = Math.floor(diffMs / 60000);
-        const hrs = Math.floor(diffMs / 3600000);
-        const days = Math.floor(diffMs / 86400000);
-        if (mins < 1) return "الآن";
-        if (mins < 60) return `منذ ${mins} دقيقة`;
-        if (hrs < 24) return `منذ ${hrs} ساعة`;
-        if (days < 7) return `منذ ${days} يوم`;
-        return date.toLocaleDateString("ar-EG");
+        const bookingDate = new Date(timestamp);
+        const diffMs = now - bookingDate;
+        const diffMins = Math.floor(diffMs / 60000);
+        const diffHours = Math.floor(diffMs / 3600000);
+        const diffDays = Math.floor(diffMs / 86400000);
+
+        if (diffMins < 1) return "الآن";
+        if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
+        if (diffHours < 24) return `منذ ${diffHours} ساعة`;
+        if (diffDays < 7) return `منذ ${diffDays} يوم`;
+
+        return bookingDate.toLocaleDateString("ar-EG");
       }
 
-      // Filter buttons (today, week, month)
-      function filterByStatus(status, btn) {
+      function filterByStatus(status) {
         currentFilter = status;
 
-        // Update button active state
+        // Update active button styles
         document
           .querySelectorAll(".filter-btn")
-          .forEach((b) => b.classList.remove("active"));
-        if (btn) btn.classList.add("active");
+          .forEach((btn) => btn.classList.remove("active"));
+        event.target.classList.add("active");
 
         const now = new Date();
-        const today = startOfToday();
-        const weekAgo = new Date(now - 7 * 24 * 60 * 60 * 1000);
-        const monthAgo = new Date(now - 30 * 24 * 60 * 60 * 1000);
+
+        // Normalize to local midnight for accurate day/week comparison
+        const startOfToday = new Date(
+          now.getFullYear(),
+          now.getMonth(),
+          now.getDate()
+        );
+        const endOfToday = new Date(startOfToday);
+        endOfToday.setDate(endOfToday.getDate() + 1);
+
+        // Start of current week (Sunday-based)
+        const startOfWeek = new Date(startOfToday);
+        startOfWeek.setDate(startOfWeek.getDate() - startOfWeek.getDay());
+        const endOfWeek = new Date(startOfWeek);
+        endOfWeek.setDate(endOfWeek.getDate() + 7);
+
+        // Start and end of current month
+        const startOfMonth = new Date(now.getFullYear(), now.getMonth(), 1);
+        const endOfMonth = new Date(now.getFullYear(), now.getMonth() + 1, 1);
 
         filteredBookings = allBookings.filter((b) => {
-          if (!b._ts) return false;
-          if (status === "today") return b._ts >= today;
-          if (status === "week") return b._ts >= weekAgo;
-          if (status === "month") return b._ts >= monthAgo;
-          return true;
+          if (!b.timestamp) return false;
+
+          // Parse ISO timestamp from Google Sheets
+          const bookingDate = new Date(b.timestamp);
+
+          if (status === "today") {
+            return bookingDate >= startOfToday && bookingDate < endOfToday;
+          }
+
+          if (status === "week") {
+            return bookingDate >= startOfWeek && bookingDate < endOfWeek;
+          }
+
+          if (status === "month") {
+            return bookingDate >= startOfMonth && bookingDate < endOfMonth;
+          }
+
+          return true; // show all if 'all' filter
         });
 
         renderNotifications();
       }
 
-      // Search + respect current filter
       function filterNotifications() {
-        const q = document
+        const searchTerm = document
           .getElementById("searchInput")
-          .value.toLowerCase()
-          .trim();
-        let base = [...allBookings];
+          .value.toLowerCase();
 
-        const now = new Date();
-        const today = startOfToday();
-        const weekAgo = new Date(now - 7 * 24 * 60 * 60 * 1000);
-        const monthAgo = new Date(now - 30 * 24 * 60 * 60 * 1000);
-
-        if (currentFilter !== "all") {
-          base = base.filter((b) => {
-            if (!b._ts) return false;
-            if (currentFilter === "today") return b._ts >= today;
-            if (currentFilter === "week") return b._ts >= weekAgo;
-            if (currentFilter === "month") return b._ts >= monthAgo;
-            return true;
-          });
+        if (searchTerm === "") {
+          filterByStatus(currentFilter);
+          return;
         }
 
-        if (q) {
-          base = base.filter(
-            (b) =>
-              (b.name && b.name.toLowerCase().includes(q)) ||
-              (b.service && b.service.toLowerCase().includes(q)) ||
-              (b.phone && b.phone.includes(q))
+        filteredBookings = allBookings.filter((booking) => {
+          return (
+            (booking.name && booking.name.toLowerCase().includes(searchTerm)) ||
+            (booking.service &&
+              booking.service.toLowerCase().includes(searchTerm)) ||
+            (booking.phone && booking.phone.includes(searchTerm))
           );
-        }
+        });
 
-        filteredBookings = base;
         renderNotifications();
       }
 
@@ -566,4 +560,3 @@
     </script>
   </body>
 </html>
-g
